# mlops_assignment1

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
.github/workflows/: ci-cd.yml
deployment/: Dockerfile  deployment.yaml  prometheus.yaml  service.yaml
src/: app.py  download_data.py  eda.py  monitoring.py  preprocessing.py  train.py
tests/: test_app.py  test_data_processing.py  test_monitoring.py
