[project]
name = "mlops-assignment1"
version = "0.1.0"
description = "End-to-End MLOps Heart Disease Classifier Pipeline using uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ucimlrepo>=0.0.7",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "mlflow>=2.13.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly map Hatchling to expose the root 'src' directory
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

